<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:background="#ffe1e0de" android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical" android:padding="@dimen/activity_padding">

        <ListView android:id="@+id/lv_word_manager" android:layout_width="match_parent"
                  android:layout_height="0dp" android:layout_weight="1"
                  android:background="@drawable/corners_listview" android:divider="@color/gray"
                  android:dividerHeight="1dp"/>

        <include layout="@layout/separate_line"/>
        <include layout="@layout/separate_line"/>

        <Button android:id="@+id/btn_add" android:layout_width="match_parent"
                android:layout_height="40dp" android:background="@drawable/corners_button_white"
                android:text="@string/add_word" android:textColor="@color/black"/>

        <include layout="@layout/separate_line"/>

        <Button android:id="@+id/btn_save" android:layout_width="match_parent"
                android:layout_height="40dp" android:background="@drawable/corners_button_white"
                android:text="@string/save_word" android:textColor="@color/black"/>

        <include layout="@layout/separate_line"/>

        <Button android:id="@+id/btn_default" android:layout_width="match_parent"
                android:layout_height="40dp" android:background="@drawable/corners_button_red"
                android:text="@string/to_default" android:textColor="@color/white"/>

        <include layout="@layout/separate_line"/>

        <Button android:id="@+id/btn_go_home" android:layout_width="match_parent"
                android:layout_height="40dp" android:background="@drawable/corners_buttom_green"
                android:text="@string/gobacktogame" android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>