<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:layout_gravity="center"
              android:background="#ffe1e0de"
              android:orientation="vertical">
    <include layout="@layout/title_bar"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
                android:padding="@dimen/activity_padding">

        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:orientation="vertical">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/whatisthis" android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                      android:background="@drawable/corners_all"
                      android:paddingBottom="@dimen/small_vertical_padding"
                      android:paddingLeft="@dimen/normal_horizontal_padding"
                      android:paddingRight="@dimen/normal_horizontal_padding"
                      android:paddingTop="@dimen/small_vertical_padding"
                      android:text="@string/whatisthis2"
                      android:textColor="@color/dark_gray" android:textSize="16sp"/>

            <include layout="@layout/separate_line"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/gamehelp" android:textSize="18sp"/>

            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                      android:background="@drawable/corners_all"
                      android:paddingBottom="@dimen/small_vertical_padding"
                      android:paddingLeft="@dimen/normal_horizontal_padding"
                      android:paddingRight="@dimen/normal_horizontal_padding"
                      android:paddingTop="@dimen/small_vertical_padding"
                      android:text="@string/gamehelp2"
                      android:textColor="@color/dark_gray" android:textSize="16sp"/>

            <include layout="@layout/separate_line"/>
            <include layout="@layout/separate_line"/>

            <Button android:id="@id/btn_go_home" android:layout_width="match_parent"
                    android:layout_height="40dp" android:background="@drawable/corners_buttom_green"
                    android:text="返回游戏页面" android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>