<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:background="@color/light_gray" android:orientation="vertical">
    <include layout="@layout/title_bar"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent" android:orientation="vertical"
                  android:padding="@dimen/activity_padding">

        <ImageView android:id="@id/iv_logo" android:layout_width="match_parent"
                   android:layout_height="wrap_content" android:src="@drawable/logo"/>

        <include layout="@layout/separate_line"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
                      android:layout_weight="1"
                      android:orientation="vertical">
            <LinearLayout android:id="@id/ll_player_count" android:layout_width="match_parent"
                          android:layout_height="0dp"
                          android:layout_weight="1"
                          android:background="@drawable/corners_top"
                          android:orientation="horizontal"
                          android:paddingLeft="@dimen/normal_horizontal_padding"
                          android:paddingRight="@dimen/big_horizontal_padding">
                <TextView android:id="@id/tv_player_count" android:layout_width="0dp"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_vertical" android:text="@string/player_count"
                          android:textColor="@color/dark_gray" android:textSize="18sp"/>
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="match_parent" android:gravity="center_vertical"
                           android:src="@drawable/right"/>
            </LinearLayout>
            <LinearLayout android:id="@id/ll_spy_count" android:layout_width="match_parent"
                          android:layout_height="0dp"
                          android:layout_weight="1"
                          android:background="@drawable/corners_middle"
                          android:orientation="horizontal"
                          android:paddingLeft="@dimen/normal_horizontal_padding"
                          android:paddingRight="@dimen/big_horizontal_padding">
                <TextView android:id="@id/tv_spy_count" android:layout_width="0dp"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_vertical" android:text="@string/spy_count"
                          android:textColor="@color/dark_gray" android:textSize="18sp"/>
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="match_parent" android:gravity="center_vertical"
                           android:src="@drawable/right"/>
            </LinearLayout>
            <LinearLayout android:id="@id/ll_winner_count" android:layout_width="match_parent"
                          android:layout_height="0dp"
                          android:layout_weight="1"
                          android:background="@drawable/corners_middle"
                          android:orientation="horizontal"
                          android:paddingLeft="@dimen/normal_horizontal_padding"
                          android:paddingRight="@dimen/big_horizontal_padding">
                <TextView android:id="@id/tv_winner_count" android:layout_width="0dp"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_vertical" android:text="@string/winner_count"
                          android:textColor="@color/dark_gray" android:textSize="18sp"/>
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="match_parent" android:gravity="center_vertical"
                           android:src="@drawable/right"/>
            </LinearLayout>
            <LinearLayout android:id="@id/ll_winner_count" android:layout_width="match_parent"
                          android:layout_height="0dp"
                          android:layout_weight="1"
                          android:background="@drawable/corners_bottom"
                          android:orientation="horizontal"
                          android:paddingLeft="@dimen/normal_horizontal_padding"
                          android:paddingRight="@dimen/normal_horizontal_padding">
                <TextView android:id="@id/tv_winner_count" android:layout_width="0dp"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_vertical" android:text="@string/show_die_mode"
                          android:textColor="@color/dark_gray" android:textSize="18sp"/>
                <CheckBox android:id="@id/cb_show_die_mode" android:layout_width="wrap_content"
                          android:layout_height="match_parent" android:gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:paddingLeft="@dimen/normal_horizontal_padding"
                  android:text="@string/notice" android:textColor="@color/dark_gray"/>

        <include layout="@layout/separate_line"/>

        <Button android:id="@id/btn_start_game" android:layout_width="match_parent"
                android:layout_height="40dp" android:background="@drawable/corners_buttom_green"
                android:text="@string/start" android:textColor="@color/white"
                android:textSize="20sp"/>

        <include layout="@layout/separate_line"/>

        <Button android:id="@id/btn_go_help" android:layout_width="match_parent"
                android:layout_height="40dp" android:background="@drawable/corners_button_white"
                android:text="@string/game_rule_explain" android:textColor="@color/black"/>

        <include layout="@layout/separate_line"/>

        <Button android:id="@id/btn_go_word_manager" android:layout_width="match_parent"
                android:layout_height="40dp" android:background="@drawable/corners_button_white"
                android:text="词库管理" android:textColor="@color/black"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_gravity="center" android:text="@string/powerby"/>

    </LinearLayout>
</LinearLayout>